# Partitioned-Container-Format

./: .gitignore  Cargo.toml
.github/workflows/: build-binaries.yml  ci-pcf-sig-reference.yml  ci-pcf-sig.yml  ci-pfs.yml  ci.yml  cross-port-interop.yml  dotnet-ci.yml  php-split.yml  php.yml  release-prepare.yml  release.yml  ts-ci.yml
implementations/: README.md
implementations/dotnet/: .gitignore  Directory.Build.props  README.md
implementations/dotnet/pcf/: Pcf.sln  README.md
implementations/dotnet/pcf-dcp/: README.md
implementations/dotnet/pcf-sig/: .gitignore  Pcf.Sig.sln  README.md
implementations/dotnet/src/Pcf/: Constants.cs  Container.cs  LittleEndian.cs  Pcf.csproj  PcfError.cs  Trailer.cs
implementations/dotnet/tests/Pcf.Tests/: RoundtripTests.cs  SpecComplianceTests.cs
implementations/php/: .gitignore  README.md  composer.json
implementations/php/pcf/: README.md  composer.json  phpunit.xml.dist
implementations/php/pcf-dcp/: .gitignore  README.md  composer.json  phpunit.xml.dist
implementations/php/pcf-dcp/examples/: gen_testvector.php
implementations/php/pcf-dcp/src/: Arena.php  Chunker.php  Consts.php  DcpHeader.php  DcpReader.php  DcpWriter.php  ErrorKind.php  ExtentInfo.php  FragTableHeader.php  FragmentEntry.php  FragmentTable.php  InnerInfo.php  InnerLocation.php  PcfDcpException.php  ReferenceVector.php  Resolved.php
implementations/php/pcf-dcp/tests/: CanonicalVectorTest.php  CoverageTest.php  PcfDcpTestCase.php  RoundtripTest.php  SpecComplianceTest.php
implementations/php/pcf-sig/: README.md  composer.json  phpunit.xml.dist
implementations/php/pcf-sig/examples/: gen_testvector.php
implementations/php/pcf-sig/src/: Consts.php  ErrorKind.php  KeyFormat.php  KeyMetadata.php  KeyRecord.php  Manifest.php  PcfSigException.php  SigAlgo.php  SignPartitions.php  SignaturePartition.php  SignedEntry.php  SigningMaterial.php  Verify.php
implementations/php/pcf-sig/tests/: CanonicalVectorTest.php  MultiSignerTest.php  PcfSigTestCase.php  RelocationTest.php  RoundtripTest.php  SpecComplianceTest.php  TamperTest.php
implementations/php/pcf/examples/: gen_testvector.php
implementations/php/pcf/src/: BlockView.php  Consts.php  Container.php  ErrorKind.php  PartitionEntry.php  PcfException.php  TableBlockHeader.php  Trailer.php
implementations/php/pcf/tests/: EntryTest.php  HeaderTest.php  PcfTestCase.php  SpecComplianceTest.php  TableTest.php  TrailerTest.php
implementations/php/src/: Blake3.php  Consts.php  Container.php  Crc64.php  ErrorKind.php  FileHeader.php  HashAlgo.php  PcfException.php
implementations/php/src/Storage/: StorageInterface.php
implementations/php/tests/: HashTest.php  RoundtripTest.php
implementations/ts/: .gitignore  README.md  package-lock.json  package.json
implementations/ts/pcf/: README.md  package.json  tsconfig.json  vitest.config.ts
implementations/ts/pcf-dcp/: README.md  package.json  vitest.config.ts
implementations/ts/pcf-dcp/examples/: gen-testvector.ts
implementations/ts/pcf-dcp/src/: arena.ts  consts.ts  errors.ts  fragment.ts  header.ts  index.ts  reader.ts  vector.ts  writer.ts
implementations/ts/pcf-dcp/test/: canonical-vector.test.ts  coverage.test.ts  helpers.ts  roundtrip.test.ts  spec-compliance.test.ts
implementations/ts/pcf-sig/: README.md  package.json  vitest.config.ts
implementations/ts/pcf-sig/examples/: gen-testvector.ts
implementations/ts/pcf-sig/src/: algo.ts  consts.ts  errors.ts  index.ts  key.ts  manifest.ts  sign.ts  signature-partition.ts  verify.ts
implementations/ts/pcf-sig/test/: canonical-vector.test.ts  (+5 more)
implementations/ts/src/: consts.ts  container.ts  errors.ts  header.ts  index.ts
implementations/ts/test/: coverage.test.ts  helpers.ts  roundtrip.test.ts  trailer.test.ts
reference/PCF-DCP-v1.0/: Cargo.toml  README.md
reference/PCF-DCP-v1.0/examples/: gen_testvector.rs
reference/PCF-DCP-v1.0/src/: arena.rs  consts.rs  error.rs  fragment.rs  header.rs  lib.rs  reader.rs  vector.rs  writer.rs
reference/PCF-DCP-v1.0/tests/: coverage.rs  cross_port_testdata.rs  roundtrip.rs  spec_compliance.rs
reference/PCF-SIG-v1.0/: Cargo.toml  README.md
reference/PCF-SIG-v1.0/examples/: gen_testvector.rs
reference/PCF-SIG-v1.0/src/: algo.rs  consts.rs  endorse.rs  error.rs  key.rs  lib.rs  manifest.rs  sig.rs  sign.rs  verify.rs
reference/PCF-SIG-v1.0/tests/: cross_port_testdata.rs  multi_signer.rs  relocation.rs  roundtrip.rs  spec_compliance.rs  tamper.rs
reference/PCF-v1.0/: .gitignore  Cargo.toml  README.md  consts.rs  container.rs  entry.rs  gen_testvector.rs  header.rs  roundtrip.rs  table.rs
reference/PCF-v1.0/examples/: gen_testvector.rs
reference/PCF-v1.0/src/: consts.rs  container.rs  error.rs  hash.rs  lib.rs  trailer.rs
reference/PCF-v1.0/tests/: coverage.rs  roundtrip.rs  spec_compliance.rs  trailer.rs
reference/PFS-MS-v1.0/: .gitignore  Cargo.toml  README.md
reference/PFS-MS-v1.0/examples/: gen_testvector.rs
reference/PFS-MS-v1.0/src/: compact.rs  compress.rs  consts.rs  delta.rs  dirsync.rs  error.rs  fs.rs  lib.rs  node.rs  reader.rs  session.rs  sign.rs  tree.rs  vector.rs  writer.rs
reference/PFS-MS-v1.0/tests/: compact.rs  coverage.rs  dirsync.rs  roundtrip.rs  sign.rs  spec_compliance.rs
specs/: PCF-DCP-spec-v1.0.txt  PCF-SIG-spec-v1.0.txt  PCF-spec-v1.0.txt  PFS-MS-spec-v1.0.txt
tools/pcf-compact/: Cargo.toml  README.md
tools/pcf-compact/src/: cli.rs  lib.rs  main.rs
tools/pcf-compact/tests/: integration.rs
tools/pcf-debug/: Cargo.toml  README.md
tools/pcf-debug/src/: lib.rs  main.rs
tools/pcf-debug/src/cli/: mod.rs
tools/pcf-debug/src/model/: diag.rs  layout.rs  mod.rs  walk.rs
tools/pcf-debug/src/plugin/: dcp.rs  mod.rs  pcfsig.rs  pfs.rs  raw.rs
tools/pcf-debug/src/render/: color.rs  hexdump.rs  html.rs  mod.rs  text.rs
tools/pcf-debug/tests/: cli_snapshot.rs  decode_dcp.rs  decode_pcfsig.rs  decode_pfs.rs  diagnostics.rs  html_smoke.rs
tools/pcf-debug/tests/common/: mod.rs
tools/pcf-sig/: Cargo.toml  README.md
tools/pcf-sig/src/: lib.rs  main.rs
tools/pcf-sig/tests/: cli_roundtrip.rs
(+66 files in other folders)
