[package]
name = "pcf-sig"
version = "0.0.1"
edition = "2021"
description = "Reference implementation of PCF-SIG v1.0, the PCF Cryptographic Signatures profile"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kduma-OSS/Partitioned-Container-Format"
homepage = "https://github.com/kduma-OSS/Partitioned-Container-Format"
readme = "README.md"
keywords = ["pcf", "signature", "ed25519", "cryptography", "container"]
categories = ["cryptography", "encoding"]

# This crate is a *reference* implementation of the PCF-SIG profile. Like the
# `pcf` crate it builds on, it favours a direct, auditable mapping onto the
# written specification (`specs/PCF-SIG-spec-v1.0.txt`) over raw performance.

[dependencies]
# The PCF-SIG profile is layered strictly above PCF v1.0; every byte container
# operation goes through the reference PCF crate.
pcf = { path = "../PCF-v1.0", version = "0.0.1" }

# SHA-256 for key fingerprints and for the optional independent re-hash check
# during verification. Pinned by the PCF crate already; we re-use it here.
sha2 = "0.10"

# Ed25519 is the MUST-support baseline algorithm (spec Section 8). The pure-Rust
# `ed25519-dalek` 2.x line implements RFC 8032 verification and signing without
# C dependencies. We disable randomized signing because PCF-SIG signs
# deterministically over a serialised manifest.
ed25519-dalek = { version = "=2.1.1", default-features = false, features = ["std"] }

# --- MSRV pins (this environment ships rustc 1.75) -------------------------
# The latest releases of these transitive crates require edition2024, which
# rustc 1.75 cannot build. Constrain them to the last 1.75-compatible line.
cpufeatures = "=0.2.12"
