[package]
name = "pcf-debug"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
description = "Inspection and visualisation tool for Partitioned Container Format (PCF) files"

[[bin]]
name = "pcf-debug"
path = "src/main.rs"

[dependencies]
pcf = { path = "../../reference/PCF-v1.0" }
